--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Website Verification</title>
-        YOUR_META_TAG_HERE
+        <meta name="google-site-verification" content="coQFKtUW6dhYRo88pQYmOvHDsY_PVjLzUBVnP2U2aQE" />
     </head>
     <body>
         <h1>Organization Website</h1>
         <p>This is a verification page for our Google Play Developer account.</p>
     </body>
+
 </html>
