--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>하나힘 - 함께 만드는 더 나은 미래</title>
-    YOUR_META_TAG_HERE
+    <meta name="google-site-verification" content="Wm9ytcSNh1JQVOhyrtmc9j4FFbELK40ww7nEhAOmIzg" />
     <style>
         * {
             margin: 0;
