--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                 <li><a href="#about">소개</a></li>
                 <li><a href="#features">특징</a></li>
                 <li><a href="#contact">연락처</a></li>
+                <li><a href="privacy-policy.html">개인정보처리방침</a></li>
             </ul>
         </nav>
     </header>
@@ -366,6 +367,9 @@
         <p>&copy; 2025 하나힘. All rights reserved.</p>
         <p style="margin-top: 0.5rem; opacity: 0.8; font-size: 0.9rem;">
             This is a verification page for our Google Play Developer account.
+        </p>
+        <p style="margin-top: 0.5rem;">
+            <a href="privacy-policy.html" style="color: white; text-decoration: none; opacity: 0.8;">개인정보처리방침</a>
         </p>
     </footer>
 </body>
